fix(display): selected article title now correctly stretches for 100% parent width

--- a/static/css/article-selected.css
+++ b/static/css/article-selected.css
@@ -3,6 +3,7 @@ tr:hover {
 }
 
 .dark-block {
+    width: 100%;
     display: block;
     background-color: rgba(17,17,27, 0.7);
     color: white;
